[package]
name = "wakapi-leaderboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
cronjob = "0.4.17"
dotenv = "0.15.0"
env = "0.0.0"
futures = "0.3.27"
lazy_static = "1.4.0"
poise = "0.5.2"
redis =  { version = "0.22.3", features = ["tokio-comp"] }
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
scraper = "0.15.0"
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
serenity = "0.11"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
